--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gnomenclature",
-  "version": "0.2.1",
+  "version": "0.5.1",
   "private": true,
   "scripts": {
     "start": "node gnne"
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "3.0.0rc4",
     "jade": "*",
-    "underscore": "*"
+    "underscore": "1.4.x"
   },
   "engines": {
     "node": "0.8.x",
