--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "express": "3.0.0rc4",
     "jade": "*",
-    "underscore": "1.4.x",
-    "sqlite3": ">=2"
+    "underscore": "1.4.x"
   },
   "engines": {
     "node": "0.8.x",
