--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "start": "node gnne"
   },
   "dependencies": {
-    "express": "3.0.0rc4",
+    "express": ">=3.0.0rc4",
     "jade": "*",
-    "underscore": "1.4.x"
+    "underscore": ">=1.4.x"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": ">=0.8.x",
+    "npm": "*"
   }
 }
