--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "express": ">=3.0.0rc4",
     "jade": "*",
-    "underscore": ">=1.4.x"
+    "underscore": ">=1.4"
   },
   "engines": {
-    "node": ">=0.8.x",
+    "node": ">=0.8",
     "npm": "*"
   }
 }
